--- a/src/components/Tools/Sketch/Sketch.css
+++ b/src/components/Tools/Sketch/Sketch.css
@@ -9,7 +9,7 @@ calcite-color-picker-swatch {
 }
 .symbol {
   padding: 1em;
-  background-color: var(--calcite-ui-foreground-1);
+  /* background-color: var(--calcite-ui-foreground-1); */
 }
 
 .slider-input {
@@ -62,7 +62,9 @@ calcite-color-picker-swatch {
   border-image-outset: initial;
   border-image-repeat: initial;
   position: relative;
-  background-color: var(--calcite-ui-foreground-1) !important;
+  background-color: var(--calcite-ui-background-1) !important;
+  color: var(--calcite-ui-forground-1) !important;
+
 }
 
 .container {
@@ -75,7 +77,7 @@ calcite-color-picker-swatch {
   flex-grow: 1;
   padding-right: 0;
   padding-left: 0;
-  background-color: var(--calcite-ui-foreground-1) !important;
+  /* background-color: var(--calcite-ui-foreground-1) !important; */
 }
 .icon-symbol {
   height: 32px;
